# lifeline_navigator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy-hf.yml
backend/: Dockerfile  Procfile  requirements.txt
backend/app/: aco.py  graph_manager.py  hospitals.py  main.py  models.py  requirements.txt
backend/scripts/: preload_graph.py
frontend/: Dockerfile  index.html  nginx.conf  nixpacks.toml  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ControlPanel.jsx  MapView.jsx  ResultPanel.jsx
