[project]
name = "lifeline-navigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "osmx>=0.0.5",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.15.3",
    "uvicorn>=0.44.0",
]
